# planner

./: .gitignore  Cargo.toml  README.md  TODO  diesel.toml
assets/: inbox.css  main.css  tailwind.css
db/initial_schema/: down.sql  up.sql
src/: main.rs  schema.rs
src/backend/: mod.rs  model.rs  schema.rs  server.rs
src/components/: backlog.rs  calendar.rs  inbox.rs  item.rs  mod.rs  schedule.rs
