[package]
name = "planner"
version = "0.1.0"
authors = ["Daan Lubbers <github.com.fn7i9@alias.daanlubbers.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["fullstack"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219"}
diesel = { version = "2.2.12", optional = true, features = ["sqlite", "serde_json", "chrono"] }
libsqlite3-sys = { version = "0.35.0", optional = true, features = ["bundled"] }
dotenvy = { version = "0.15.7", optional = true }
diesel-async = { version = "0.6.1", optional = true, features = ["sqlite"] }

[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:diesel", "dep:libsqlite3-sys", "dep:dotenvy", "dep:diesel-async"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
